added hangman game

--- a/hangman_game.ipynb
+++ b/hangman_game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,25 +40,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess was correct!\n",
+      "Congratulations, you guessed it correctly!\n"
+     ]
+    }
+   ],
    "source": [
     "#create a list of underscores to the length of the word\n",
-    "guesses = [\"_\"]*len(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "guesses = [\"_\"]*len(word)\n",
+    "\n",
     "#create main game loop\n",
     "while not game_over:\n",
+    "    #ouput game info\n",
+    "    hidden_word = \"\".join(guesses)\n",
+    "    print(\"Your guessed letters: {}\".format(guessed))\n",
+    "    print(\"Word to guess: {}\".format(hidden_word))\n",
+    "    print(\"Lives: {}\".format(lives))\n",
+    "    \n",
     "    ans = input(\"Type quit or guess a letter: \").lower()\n",
+    "    \n",
+    "    #clear all previous output \n",
+    "    clear_output()\n",
+    "    \n",
     "    if ans == \"quit\":\n",
     "        print(\"Thanks for playing\")\n",
+    "        game_over = True\n",
+    "    elif ans in word and ans not in guessed:\n",
+    "        print(\"Guess was correct!\")\n",
+    "        \n",
+    "        #create a loop to change underscore to proper letter\n",
+    "        for i in range(len(word)):\n",
+    "            if word[i] == ans:\n",
+    "                guesses[i] = ans\n",
+    "                \n",
+    "    elif ans in guessed:\n",
+    "        print(\"You already guessed that! Try again.\")\n",
+    "    else:\n",
+    "        lives -= 1\n",
+    "        print(\"Incorrect, lost a life!\")\n",
+    "    \n",
+    "    #add guess to guessed list\n",
+    "    if ans not in guessed:\n",
+    "        guessed.append(ans)\n",
+    "   \n",
+    "    if lives <= 0:\n",
+    "        print(\"All lives lost, game over!\")\n",
+    "        game_over = True\n",
+    "    elif word == \"\".join(guesses):\n",
+    "        print(\"Congratulations, you guessed it correctly!\")\n",
     "        game_over = True"
    ]
   },
@@ -67,14 +103,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "while not game_over:\n",
-    "    #ouput game info\n",
-    "    hidden_word = \"\".join(guesses)\n",
-    "    print(\"Word to guess: {}\".format(hidden_word))\n",
-    "    print(\"Lives: {}\".format(lives))\n",
-    "    ans = input"
-   ]
+   "source": []
   }
  ],
  "metadata": {
