added shopping cart

--- a/return_statement.ipynb
+++ b/return_statement.ipynb
@@ -107,6 +107,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "function\n"
+     ]
+    }
+   ],
+   "source": [
+    "#scope\n",
+    "def scopeTest():\n",
+    "    word = \"function\"\n",
+    "    return word\n",
+    "value = scopeTest()\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
