shopping cart added

--- a/shopping_cart.ipynb
+++ b/shopping_cart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,67 @@
     "    except:\n",
     "        print(\"Couldn't remove item\")\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showCart():\n",
+    "    clear_output()\n",
+    "    if cart:\n",
+    "        print(\"Here is your cart:\")\n",
+    "        for item in cart:\n",
+    "            print(\"- {}\".format(item))\n",
+    "    else:\n",
+    "        print(\"Your cart is empty.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clearCart():\n",
+    "    clear_output()\n",
+    "    cart.clear()\n",
+    "    print(\"Your cart is empty\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create main function that loops until the user quits\n",
+    "def main():\n",
+    "    done = False\n",
+    "    while not done:\n",
+    "        ans = input(\"quit/add/remove/show/clear: \").lower()\n",
+    "        #base case\n",
+    "        if ans == \"quit\":\n",
+    "            print(\"Thanks for using our program.\")\n",
+    "            showCart()\n",
+    "            done = True\n",
+    "        elif ans == \"add\":\n",
+    "            item = input(\"What would you like to add?\").title()\n",
+    "            addItem(item)\n",
+    "            print(\"Added Item\")\n",
+    "        elif ans == \"remove\":\n",
+    "            item = input(\"What would you like to remove?\").title()\n",
+    "            removeItem(item)\n",
+    "            print(\"Removed Item\")\n",
+    "        elif ans == \"show\":\n",
+    "            showCart()\n",
+    "        elif ans == \"clear\":\n",
+    "            clearCart()\n",
+    "        else:\n",
+    "            print(\"Sorry, that wasn't an option.\")\n",
+    "main()"
    ]
   },
   {
