hidden layer and activation function added

--- a/0.4_batches_layers_objects.ipynb
+++ b/0.4_batches_layers_objects.ipynb
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.20691503, -0.02035641,  0.18844881, -0.21345643, -0.75198759],\n",
-       "       [ 1.16856885,  0.05984006,  0.6204668 ,  0.38671574, -0.59288677],\n",
-       "       [-0.00528455,  0.10507396,  0.27076414, -0.26640218, -1.19489575]])"
+       "array([[ 0.07974206, -0.1206105 ],\n",
+       "       [ 0.00251507, -0.13801445],\n",
+       "       [ 0.06388899,  0.00884218]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,8 @@
     "layer2 = Layer_Dense(5,2)\n",
     "\n",
     "layer1.forward(X)\n",
-    "layer1.output\n"
+    "layer2.forward(layer1.output)\n",
+    "layer2.output\n"
    ]
   },
   {
