--- a/0.5_hiddenlayer_activationfunc.ipynb
+++ b/0.5_hiddenlayer_activationfunc.ipynb
@@ -89,9 +89,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.00011077, 0.        , 0.00018096, 0.00035328, 0.0006056 ],\n",
+       "       [0.        , 0.        , 0.00047149, 0.00047814, 0.00088211],\n",
+       "       ...,\n",
+       "       [0.06578535, 0.01651732, 0.        , 0.03221576, 0.03759266],\n",
+       "       [0.04983793, 0.04315299, 0.        , 0.00568306, 0.        ],\n",
+       "       [0.07122471, 0.00570668, 0.        , 0.04232009, 0.05419437]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Layer_Dense:\n",
     "    #initialize the first layer \n",
@@ -107,10 +124,24 @@
     "    def forward(self, inputs):\n",
     "        self.output = np.maximum(0, inputs)\n",
     "        \n",
-    "layer1 = Layer_Dense(4,5)\n",
-    "#this layer's input should be the size of the previous layer's output (4, 5 <- output)\n",
-    "layer2 = Layer_Dense(5,2)"
+    "layer1 = Layer_Dense(2,5)\n",
+    "activation1 = Activation_ReLU()\n",
+    "\n",
+    "layer1.forward(X)\n",
+    "\n",
+    "activation1.forward(layer1.output)\n",
+    "activation1.output\n",
+    "\n",
+    "# #this layer's input should be the size of the previous layer's output (4, 5 <- output)\n",
+    "# layer2 = Layer_Dense(5,2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
