improved simpson diversity calc notebook

--- a/simpson_prototype.ipynb
+++ b/simpson_prototype.ipynb
@@ -84,25 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['A', 325, 925],\n",
-       "       ['B', 305, 40],\n",
-       "       ['C', 370, 35]], dtype=object)"
+       "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sddata = np.array(df)\n",
-    "sddata"
+    "sddata\n",
+    "len(sddata[:,:])"
    ]
   },
   {
@@ -129,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simpson_diversity_index():\n",
+    "def simpson_diversity_index(n):\n",
     "    clist = []\n",
-    "    for i in (0,2,1):\n",
-    "        C1num = sddata[i,2]\n",
+    "    for i in (0,len(sddata[:,1])-1,1):\n",
+    "        C1num = sddata[i,n]\n",
     "        C = (C1num/C1den)**2\n",
     "        clist.append(C)\n",
     "    SDI = 1 - sum(clist)\n",
@@ -146,32 +145,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14154999999999984"
+       "0.66445"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "simpson_diversity_index()\n",
+    " simpson_diversity_index(1)\n",
     "        \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
